// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Wall adding the className hardMode 1`] = `
<div
  className="Wall hardMode "
/>
`;

exports[`should render Wall adding the className hardMode moveError separeted by space 1`] = `
<div
  className="Wall hardMode moveError "
/>
`;

exports[`should render Wall adding the className moveError 1`] = `
<div
  className="Wall moveError "
/>
`;

exports[`should render Wall without crashing 1`] = `
<div
  className="Wall "
/>
`;
